k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: campusconnect
  labels:
    name: campusconnect
    environment: production
